--- a/portfolio/src/styles/_contact.scss
+++ b/portfolio/src/styles/_contact.scss
@@ -10,7 +10,7 @@
     left: 0;
     right: 0;
     z-index: 10;
-    height: 25rem;
+    height: 45vh;
     width: 90vw;
     overflow: auto;
     margin: 0 auto;
