--- a/portfolio/src/styles/_loading.scss
+++ b/portfolio/src/styles/_loading.scss
@@ -1,9 +1,13 @@
 @use 'variables' as *;
 
-.loading-container {
+.loading-container div {
     width: 100%;
-    height: 100vh;
+    height: 100%;  
     background-color: white;
+    position: fixed; /* Ensure the loading container covers the entire viewport */
+    top: 0;
+    left: 0;
+    z-index: 9000;
 }
 
 .loading {
@@ -12,7 +16,8 @@
     right: 0;
     margin: 0 auto;
     height: auto;
-    top: 24vh;
+    top: 25vh;
+    z-index: 99999;
 }
 
   .container {
@@ -27,18 +32,20 @@
     height: 80px;
     margin: 0 auto;
     display: flex;
-    position: absolute;
     top: 61vh;
     right: 0;
     left: 0;
+    z-index: 9999;
   }
 
   .circle {
     width: 20px;
     height: 20px;
-    background: $light-blue;
+    background: black;
     border-radius: 50%;
     margin: 0 auto;
+    position: absolute;
+    z-index: 99999;
   }
 
   .circle {
