--- a/portfolio/src/styles/_singleWork.scss
+++ b/portfolio/src/styles/_singleWork.scss
@@ -9,7 +9,7 @@
     top: 6rem;
     left: 0.4rem;
     z-index: 100;
-    height: 35rem;
+    height: 85vh;
     width: 90vw;
     overflow: auto; 
     margin: 0 1rem;
@@ -101,6 +101,19 @@
 
     .process {
         margin: 1rem;
+    }
+
+    .process a {
+        margin-left: 0.25rem;
+        color: $text-color;
+        border-bottom: 2px $text-color solid;
+       
+    }
+
+    .process {
+        a:hover, a:focus, a:active {
+            font-weight: 700;
+        }
     }
 
     .hide-tab {
@@ -234,9 +247,13 @@
         }
 
         .process {
-           h3, a, p {
+           h3, p {
             margin: 1rem 1.5rem;
            }
+        }
+
+        .process a {
+            margin-left: 0.25rem;
         }
     }
 
@@ -274,12 +291,15 @@
 
     // 1440px 
     @media (min-width: 90em) {
-        right: 10rem;
+        right: 14rem;
+        height: 40rem;
+        width: 70vw;
     }
 
     // 1750px
     @media (min-width: 109.37em) {
-        right: 13rem;
+        right: 16rem;
+        height: 45rem;
         
         .work-summary {
             margin: 2.5rem 5rem;
@@ -294,15 +314,20 @@
         }
 
         .process {
-            h3, a, p {
+            h3, p {
              margin: 1rem 2.5rem;
             }
-         }
+        }
+
+        .process a {
+            margin-left: 0.25rem;
+        }
     }
 
     // 1920px
     @media (min-width: 120em) {
         width: 70vw;
         right: 17rem;
+        height: 50rem;
     }
 }
