--- a/portfolio/src/styles/themes/_pink.scss
+++ b/portfolio/src/styles/themes/_pink.scss
@@ -13,6 +13,10 @@
 
 .pink {
 
+    .loading-container div {
+        background-color: #ffe3ee;
+    }
+
     .home-entry-content {
         background-color: $p-background-color;
         color: $p-text-color;
