--- a/portfolio/src/styles/themes/_yellow.scss
+++ b/portfolio/src/styles/themes/_yellow.scss
@@ -11,6 +11,10 @@
 
 .yellow {
 
+    .loading-container div {
+        background-color: #fff2e5;
+    }
+
     .home-entry-content {
         background-color: $y-background-color;
         color: $y-text-color;
