--- a/portfolio/src/styles/_loading.scss
+++ b/portfolio/src/styles/_loading.scss
@@ -4,10 +4,10 @@
     width: 100%;
     height: 100%;  
     background-color: white;
-    position: fixed; /* Ensure the loading container covers the entire viewport */
+    position: fixed; 
     top: 0;
     left: 0;
-    z-index: 9000;
+    z-index: 9999;
 }
 
 .loading {
@@ -20,14 +20,14 @@
     z-index: 99999;
 }
 
-  .container {
+.container {
     display: flex;
     max-width: max-content;
     flex-direction: column;
     margin: auto;
-  }
+}
 
-  .loader {
+.loader {
     width: 130px;
     height: 80px;
     margin: 0 auto;
@@ -36,21 +36,11 @@
     right: 0;
     left: 0;
     z-index: 9999;
-  }
+}
 
-  .circle {
-    width: 20px;
-    height: 20px;
-    background: black;
-    border-radius: 50%;
-    margin: 0 auto;
-    position: absolute;
-    z-index: 99999;
-  }
-
-  .circle {
+.circle {
     animation: jump 1s linear infinite
-    }
+}
 
     @keyframes jump {
     0% {
@@ -70,3 +60,11 @@
     #c {
     animation-delay: 0.4s;
     }
+
+    // 1024px
+@media (min-width: 64em) {
+  .loading {
+    top: 35vh;
+    width: 25rem;
+  }
+}
