--- a/portfolio/src/styles/themes/_blue.scss
+++ b/portfolio/src/styles/themes/_blue.scss
@@ -15,6 +15,10 @@
 
 .blue {
 
+    .loading-container div {
+        background-color: #e7f1ff;
+    }
+
     .home-entry-content {
         background-color: $b-background-color;
         color: $b-text-color;
