--- a/portfolio/src/styles/themes/_darkBlue.scss
+++ b/portfolio/src/styles/themes/_darkBlue.scss
@@ -11,6 +11,10 @@
 
 .dark-blue {
 
+    .loading-container div {
+        background-color: $db-background-color;
+    }
+
     .home-entry-content {
         background-color: $db-background-color;
         color: $db-text-color;
@@ -33,14 +37,14 @@
         }
 
         &::before {
-            background: radial-gradient(circle, $db-orb-color 10%, transparent 60%);
+            background: radial-gradient(circle, $db-orb-color 10%, transparent 70%);
             background-size: 40px 40px; /* Adjust size of orbs */
             background-position: right bottom; /* Start orbs from the bottom */
-            animation: float 90s infinite alternate; /* Adjust animation duration */
+            animation: float 130s infinite alternate; /* Adjust animation duration */
         }
 
         &::after {
-            background: radial-gradient(circle, $db-orb-color-2 10%, transparent 50%);
+            background: radial-gradient(circle, $db-orb-color-2 10%, transparent 60%);
             background-size: 30px 30px; /* Adjust size of orbs */
             background-position: left bottom; /* Start orbs from the bottom */
             animation: float 120s infinite alternate; /* Adjust animation duration */
