changed text color on green stack buttons

--- a/portfolio/src/styles/themes/_green.scss
+++ b/portfolio/src/styles/themes/_green.scss
@@ -227,6 +227,7 @@
     .filter-container {
         .filter-buttons button {
             background-color: $g-primary;
+            color: $g-text-color;
         }
         
         .line {
